[package]
name = "xueqiu-task"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
chrono = "0.4.42"
notify-rust = "4.11.7"
rss = "2.0.12"
reqwest = { version = "0.13", features = ["blocking", "native-tls"] }
regex = "1.12.2"

[build-dependencies]
slint-build = "1.14.1"
